2012-11-15  Carl Hetherington  <cth@carlh.net>

	* Default to using a DCI name.

2012-11-14  Carl Hetherington  <cth@carlh.net>

	* Rearrange the GUI a bit to tidy things up.

	* Some internal reorganisation.

2012-11-10  Carl Hetherington  <cth@carlh.net>

	* Version 0.57 released.

2012-11-10  Carl Hetherington  <cth@carlh.net>

	* Fix crash when trying to use a DCI name when there
	is no soundtrack (yet) (reported by Wolfgang Woehl).

2012-11-07  Carl Hetherington  <cth@carlh.net>

	* Version 0.56 released.

2012-11-05  Carl Hetherington  <cth@carlh.net>

	* Remove options to black-out the video when cropping the end;
	it complicates the code and is getting a bit close to video
	editing.

	* Add option to trim from both the start and
	the end of the input video.

	* Various bug fixes and code rearrangement.

2012-10-14  Carl Hetherington  <cth@carlh.net>

	* Basic support for DVD and Blu-Ray subtitles.

	* Re-add DCI naming support.

	* Basic support for selection of audio
	and subtitle streams.

	* Fixes for audio/video sync in some cases.

	* Cope with videos with varying size and/or
	pixel format.

	* Fix bug with handling of YUV422-format videos.

2012-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.55 released.

2012-10-09  Carl Hetherington  <cth@carlh.net>

	* Fix bug possibly causing randomly-occuring
	black thumbnails.

	* Fix problems with obtaining frame rate of
	WMV files (reported by Anders Nordentoft-Madsen).

2012-10-07  Carl Hetherington  <cth@carlh.net>

	* Fix up some bugs when using limited DCP
	range (reported by Wolfgang Woehl).

	* Don't stretch still images for DCPs, just
	scale them up and pad them as required.

2012-10-02  Carl Hetherington  <cth@carlh.net>

	* Version 0.54 released.

2012-10-02  Carl Hetherington  <cth@carlh.net>

	* When encoding 24 frames per second drop
	frame (ie 23.976 frames per second) run the
	video at 24 FPS and resample the audio so
	that when it is run correspondingly (slightly) fast